--- a/sections/Implementation/MIImplementation/ImplBN.tex
+++ b/sections/Implementation/MIImplementation/ImplBN.tex
@@ -5,23 +5,35 @@ the current setup.
 
 \section{Implementation}
 
-Introduction: We didnt really implement the MI-part.
-\textbf{If} it was to be implemented we had two options:
+We did not implement a belief network, therefor this section will be used to
+show how it could be implemented. To implement the network there are two
+options, one where it could be implemented on the NXT and the other where it is
+implemented on a PC. 
 
-\begin{enumerate}
-\item Implement the belief network on the NXT.
-\item Run the MI-agent on a computer and establish communication between the brick and the computer.
-\end{enumerate}
+% Introduction: We didnt really implement the MI-part.
+% \textbf{If} it was to be implemented we had two options:
+% 
+% \begin{enumerate}
+% \item Implement the belief network on the NXT.
+% \item Run the MI-agent on a computer and establish communication between the brick and the computer.
+% \end{enumerate}
 
 \subsection{Option One}
-One of the first issues with implementing the model on the NXT is the available
-RAM for the computing of the network. The primary limitation for the NXT is the
+One of the first issues with implementing the model on the NXT is the amount of
+RAM for the computing the network. The primary limitation for the NXT is the
 low amount of RAM, namely 64KB, see \autoref{PlatformC}. Although the flash
 storage on the NXT is larger, at 256KB, it is still necessary to load the code
-into the RAM, so the real limiting factor is still the amount of available RAM.
-\fix{}{Do a calculation of how many states} In order to implement the network
-on the NXT, it is necessary to reduce the complexity of the model or else it wont
-be possible to \fix{}{finsh the sentence}
+into the RAM, so the real limiting factor is still the amount of available RAM. 
+In order to implement the network on the NXT, it is necessary to reduce the
+complexity of the model or else it wont be possible to implement it on the NXT.
+Since the first network had a state space of $3^2*5^6 = 140625$ states, this
+would theoretically need 560KB of RAM given that each state is 4 byte. The 4
+bytes are assumed as the NXT uses 16 bit to represent integers which in terms
+are the largest type used. However if we remove some of the states which are not
+necessary according to the implementation, the state space could be reduced to
+$3^1*5^4 = 1875$ which given a size of the state of each space at 4KB would need
+7.5KB in the worst case. Given this state space it would be possible to
+implement the belief network on the NXT.
 
 \subsection{Option Two}
 The second option involves using a computer as the computational module for the
